# exercises

Daily-Programmer/: README
Daily-Programmer/193-Easy/: Makefile  Volumes.cs  run.sh
Project-Euler/: README
Project-Euler/Problem1/: README  multiples.c
Project-Euler/Problem10/: README  sumofprimes.java
Project-Euler/Problem14/: longestcollatz.c
Project-Euler/Problem18/: README  maxpathsum.c
Project-Euler/Problem2/: README  fib.c
Project-Euler/Problem20/: sum-of-fact.clj
Project-Euler/Problem3/: README  primefactor.java
Project-Euler/Problem38/: pandigitalmultiples.java
Project-Euler/Problem4/: README  palindrome.java
Project-Euler/Problem5/: README  smallestmultiple.c
Project-Euler/Problem6/: sumsquarediff.c
opengl-learning/: .gitignore  .main.c.swp  CMakeLists.txt  Makefile  log  main.c  main2.cpp  opengl  test.frag  test.vert
opengl-learning/maths/: maths.c  maths.h
opengl-learning/objects/: billiards_table_object.c  billiards_table_object.h  human.dae  human_bones.dae  human_object.c  human_object.h  mesh.c  mesh.h  model.c  model.h  monkey.dae  monkey_object.c  monkey_object.h  plane_object.c  plane_object.h  sphere_object.c  sphere_object.h
opengl-learning/objects/models/: pool.dae  pool.mtl  table.dae  untitled.dae
opengl-learning/shaders/: frag.glsl  vert.glsl
opengl-learning/simulation/: sphere_simulation.c  sphere_simulation.h
opengl-learning/utils/: camera.c  gl_utils.c  gl_utils.h
scheme/: sudoku.scm
sicp/: 1-10.scm  1-12.scm  1-13.scm  1-19.scm  1-20.scm  1-4.scm  1-5.scm  1-6.scm  1-7.scm  1-8.scm  1-9.scm
(+245 files in other folders)
